--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,34 @@
-h2{
-    color:red
+.llamar p{
+
+    color: white;
+}
+
+.llamar h2{
+
+    color: yellow;
+}
+
+.inicio h1{
+
+    font-family: 'Times New Roman', Times, serif;
+    color: tomato;
+}
+
+.adopta h2{
+
+    color: yellow;
+}
+
+.adopta a{
+    color: white
+}
+
+.contactanos h2{
+
+    color:yellow;
+}
+
+.contactanos p{
+    
+    color: white;
 }
